# EmbedChainlitPublic

./: .replit  README.md  app.py  chainlit.md  database.py  openai_api.py  pyproject.toml  replit.nix  utils.py
.chainlit/: config.toml
.files/8d2c5608-5937-4211-959f-1585c4d3731b/: f69e52e3-7cdb-4083-9856-2b98bbadc3a6.txt
db/: chroma-collections.parquet  chroma.sqlite3
db/index/: id_to_uuid_29908786-6c97-4fbf-a6f0-d1bc13da6f8c.pkl  id_to_uuid_712df439-b60b-4438-9c30-1c458a9167e3.pkl  index_metadata_29908786-6c97-4fbf-a6f0-d1bc13da6f8c.pkl  index_metadata_712df439-b60b-4438-9c30-1c458a9167e3.pkl  uuid_to_id_29908786-6c97-4fbf-a6f0-d1bc13da6f8c.pkl  uuid_to_id_712df439-b60b-4438-9c30-1c458a9167e3.pkl
